--- a/app/views/dashboard/new_preference.html.erb
+++ b/app/views/dashboard/new_preference.html.erb
@@ -1,23 +1,54 @@
+<h3>Submit New Preference</h3>
 <%= form_for @preference do |p| %>
     <%= p.nested_fields_for :preference_entries do |pe| %>
-        <%= pe.select(:preference_type, [['Prefer', 'Prefer'], ['Class', 'Class'], ['R/N Work', 'R/N Work'], ['Obligation', 'Obligation']]) %>
-        <%= pe.text_field(:comments, :size => 150) %>
-        Comments
-        <%= pe.nested_fields_for :entry_occurences do |eo| %>
-            <%= eo.check_box :su %>
-            <%= eo.check_box :m %>
-            <%= eo.check_box :tu %>
-            <%= eo.check_box :w %>
-            <%= eo.check_box :th %>
-            <%= eo.check_box :f %>
-            <%= eo.check_box :sa %>
-            <%= eo.time_select(:start_time, {:minute_step => 30, :ampm => true}) %>
-            <%= eo.time_select(:end_time, {:minute_step => 30, :ampm => true}) %>
+        <div class="row"><div class="col-md-8">
+        <div class="panel panel-default"><div class="panel-body">
+        <%= pe.select(:preference_type, [['Prefer', 'Prefer'], ['Class', 'Class'], ['R/N Work', 'R/N Work'], ['Obligation', 'Obligation']], {}, {class: "form-control", style: "width:100px"}) %>
+        <%= pe.nested_fields_for :entry_occurences, wrapper_options: {class:'form_inline'} do |eo| %>
+            <div class="row"><div class="col-md-9">
+            &emsp;  &emsp;
+            <label class="checkbox-inline">
+            <%= eo.check_box :su %> Su
+            </label>
+            <label class="checkbox-inline">
+            <%= eo.check_box :m %> M
+            </label>
+            <label class="checkbox-inline">
+            <%= eo.check_box :tu %> Tu
+            </label>
+            <label class="checkbox-inline">
+            <%= eo.check_box :w %> W
+            </label>
+            <label class="checkbox-inline">
+            <%= eo.check_box :th %> Th
+            </label>
+            <label class="checkbox-inline">
+            <%= eo.check_box :f %> F
+            </label>
+            <label class="checkbox-inline">
+            <%= eo.check_box :sa %> Sa &nbsp; &nbsp;
+            </label>
+            <%= eo.select(:start_time, @start_times, {}, {class: "form-control", style: "width:135px;display:inline"}) %>
+            <%= eo.select(:end_time, @end_times, {}, {class: "form-control", style: "width:135px;display:inline"}) %>
+            </div>
+            <div class="col-md-2">
             <%= eo.remove_nested_fields_link 'Remove Occurence' %>
+            </div></div>
         <% end %>
-        <%= pe.add_nested_fields_link :entry_occurences, 'Add Occurence' %>
+        <div class="row"><div class="col-md-2 col-md-offset-9">
+         <%= pe.add_nested_fields_link :entry_occurences, 'Add Occurence' %>
+         </div></div>
+        <br>
+        &emsp;  &emsp;<%= pe.text_area(:comments, size: "30x3") %>
+        <br>
+        &emsp;  &emsp;Comments
+        <br><br>
         <%= pe.remove_nested_fields_link 'Remove Entry' %>
+        </div></div>
+        </div></div>
     <% end %>
     <%= p.add_nested_fields_link :preference_entries, 'Add Entry' %>
-    <%= p.submit %>
+    <div class="row"><div class="col-md-2 col-md-offset-6">
+    <div align="right">
+    <%= p.submit "Submit Preference", class:"btn btn-default"%></div></div></div>
 <% end %>
