--- a/app/views/dashboard/show_preference.html.erb
+++ b/app/views/dashboard/show_preference.html.erb
@@ -5,23 +5,8 @@
             <% for preference_entry in preference.preference_entries.all %>
               <% type = preference_entry.preference_type %>
               <% for entry_occurence in preference_entry.entry_occurences.all %>
-                <% if date.wday == 1 and entry_occurence.m %>
-                  <%= simple_format("(" + type + ": " + entry_occurence.start_time.to_s + " to " + entry_occurence.end_time.to_s + ")\n") %>
-                <% elsif date.wday == 2 and entry_occurence.tu %>
-                  <%= simple_format("(" + type + ": " + entry_occurence.start_time.to_s + " to " + entry_occurence.end_time.to_s + ")\n") %>
-                <% elsif date.wday == 3 and entry_occurence.w %>
-                  <%= simple_format("(" + type + ": " + entry_occurence.start_time.to_s + " to " + entry_occurence.end_time.to_s + ")\n") %>
-                <% elsif date.wday == 4 and entry_occurence.th %>
-                  <%= simple_format("(" + type + ": " + entry_occurence.start_time.to_s + " to " + entry_occurence.end_time.to_s + ")\n") %>
-                <% elsif date.wday == 5 and entry_occurence.f %>
-                  <%= simple_format("(" + type + ": " + entry_occurence.start_time.to_s + " to " + entry_occurence.end_time.to_s + ")\n") %>
-                <% elsif date.wday == 6 and entry_occurence.sa %>
-                  <%= simple_format("(" + type + ": " + entry_occurence.start_time.to_s + " to " + entry_occurence.end_time.to_s + ")\n") %>
-                <% elsif date.wday == 0 and entry_occurence.su %>
-                  <%= simple_format("(" + type + ": " + entry_occurence.start_time.to_s + " to " + entry_occurence.end_time.to_s + ")\n") %>
-                <% end %>
+                <%= helper_format(type, date, entry_occurence) %>
               <% end %>
             <% end %>
           <% end %>
-        
     <% end %>
