--- a/app/views/assignments_weeks/show.html.erb
+++ b/app/views/assignments_weeks/show.html.erb
@@ -1,1 +1,1 @@
-<h3>Week of <%= @assignments_week.name %> </h3>
+<h3>Week of <%= @assignments_week.start_date.to_s %> to <%= @assignments_week.end_date.to_s %> </h3>
