cleaned up view and navbar and preference view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,5 +12,10 @@
  *
  */
  
+ $navbar-default-bg: #003F87;
+ $navbar-default-link-hover-color: #FFC61E;
+ $navbar-default-link-color: #FFFFFF;
+ $navbar-default-link-active-color: #FFC61E;
+ 
 @import "bootstrap-sprockets";
 @import "bootstrap";
