--- a/app/views/dashboard/new_preference.html.erb
+++ b/app/views/dashboard/new_preference.html.erb
@@ -1,4 +1,4 @@
-<h3>Submit New Preference</h3>
+<h3>Edit Preferences</h3>
 <%= form_for @preference do |p| %>
     <%= p.nested_fields_for :preference_entries do |pe| %>
         <div class="row"><div class="col-md-8">
