--- a/app/views/assignments_weeks/show.html.erb
+++ b/app/views/assignments_weeks/show.html.erb
@@ -1,4 +1,9 @@
-<h3>Week of <%= @assignments_week.to_s %> </h3>
+<h3>Week of <%= @assignments_week.to_s %>
+<%= form_tag(assignments_weeks_path, method: "get") do %>
+    <%= select_tag :chosen_week, options_for_select(@weeks, @assignments_week.id), {class: "form-control", style: "width:210px;display:inline"} %>
+    <%= submit_tag("Select Week", class:"btn btn-default") %>
+<% end %>
+</h3>
 <p class="text-muted">Click on facility to view its assignments for this week</p>
 <div class="row">
 <div class="col-md-2">
