--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+  
+  
 
   <body>
     <% if notice %>
@@ -33,29 +35,35 @@
     <% end %>
     <%= yield %>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Welcome to CafeHub </a>
+          <a class="navbar-brand" href="/">
+            <%= image_tag("ETS_logo_CMYK_print_notagline.png", style: 'height:140%;width:auto;') %>
+          </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><%= link_to "Dashboard", root_path %></a></li>
-            <li><a href="#"><%= link_to "New Preference", dashboard_new_preference_path %></a><li>
-            <li><a href="#"><%= link_to "Submitted Preferences", dashboard_preferences_path %></a><li>
-            <li><a href="#"><%= link_to "Request Time Off", root_path %></a></li>
+            <li><%= link_to "Dashboard", root_path %></li>
+            <li><%= link_to "Edit Preferences", dashboard_new_preference_path %><li>
+            <li><%= link_to "Submitted Preference", dashboard_preferences_path %><li>
+            <li><%= link_to "Request Time Off", root_path %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "New Facility", new_facilities_path %></li>
+                <li><%= link_to "New Week", new_assignments_weeks_path %></li>
+                <li><%= link_to "View Lastest Week", assignments_weeks_path %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "Manual Assignment", new_assignments_path %></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
     
-    <p class="navbar-text pull-right">
+    <p class="navbar-text footer navbar-fixed-bottom" align="right">
       <% if user_signed_in? %>
         Logged in as <strong><%= current_user.email %></strong>.
         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
