can view other employee's preferences

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,7 @@
             <li><%= link_to "Edit Preferences", dashboard_new_preference_path %><li>
             <li><%= link_to "Submitted Preference", dashboard_preferences_path %><li>
             <li><%= link_to "Request Time Off", root_path %></li>
+            <li><%= link_to("Employees", '/users/all') %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
               <ul class="dropdown-menu">
