--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -5,7 +5,7 @@
   <%= form_for(@setting, url: settings_path(@setting.var), method: 'patch') do |f| %>
       <%= f.label key, "Change Sign-up Code (for new users)" %><br />
       <p><i>Change may take some time to be reflected</i></p>
-      <%= f.text_area :value, autocomplete: "off" %><br />
+      <%= f.text_field :value, autocomplete: "off", id: "Sign up code"%><br />
       <%= f.submit "Update" %>
   <% end %>
 <% end %>
