added button and routes to generate assignments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  $navbar-default-link-hover-color: #FFC61E;
  $navbar-default-link-color: #FFFFFF;
  $navbar-default-link-active-color: #FFC61E;
+ $btn-primary-bg: #003F87;
  
 @import "bootstrap-sprockets";
 @import "bootstrap";
