--- a/app/views/assignments_weeks/new.html.erb
+++ b/app/views/assignments_weeks/new.html.erb
@@ -1,5 +1,5 @@
 <h3>Create New Week</h3>
     <%= form_for @assignments_week do |f| %>
-      Week of: <%= f.date_select :start_date %> to <%= f.date_select :end_date %>
+      Week of: <%= f.date_select(:start_date, {}, {class: "form-control", style: "width:100px;display:inline"}) %> to <%= f.date_select(:end_date, {}, {class: "form-control", style: "width:100px;display:inline"}) %>
       <%= f.submit "Create", class:"btn btn-default" %>
     <% end %>
