modified code for assignment model change

--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -1,3 +1,7 @@
 <h3>Assigned Schedule</h3>
 <h4>This is your assigned working schedule.</h4>
-<%= render partial: "layouts/weekly_calendar", locals: { all_times: Preference.all_times, entries_hash: @user.assignments_hash(@chosen_week)} %>
+<%= form_tag(root_path, method: "get") do %>
+    <%= select_tag :assignments_week_id, options_for_select(@weeks, @chosen_week), {class: "form-control", style: "width:210px;display:inline"} %>
+    <%= submit_tag("Select Week", class:"btn btn-default") %>
+<% end %>
+<%= render partial: "layouts/weekly_calendar", locals: { all_times: User.all_times, entries_hash: @user.assignments_hash(@chosen_week)} %>
