finished feature to color code preferences

--- a/app/views/layouts/_weekly_calendar.html.erb
+++ b/app/views/layouts/_weekly_calendar.html.erb
@@ -21,11 +21,24 @@
     <tr>
         <td><%= t %></td>
         <% for day in [:su, :m, :tu, :w, :th, :f, :sa] do %>
-        <% @id = day.to_s + "_" + t %>
-            <td id="<%= @id %>">
-                <% if entries_hash[day].key?(t) %>
-                    <%= entries_hash[day][t].join(", ")%>
+            <% @id = day.to_s + "_" + t %>
+            <% entry = entries_hash[day][t] %>
+            <% @hover_text = "" %>
+            <% @td_color = "#FFFFFF" %>
+            <% if entry %>
+                <% @td_color = entry["cell_color"] %>
+                <% if entry["hover_text"] %>
+                    <% @hover_text = entry["hover_text"] %>
                 <% end %>
+            <% end %>
+            <td id="<%= @id %>" bgcolor="<%= @td_color %>">
+            <% if entry %>
+                <span title="<%= @hover_text %>">
+                    <font color="<%= entry["text_color"] %>">
+                    <%= entry["data"].join(", ") %>
+                    </font>
+                </span>
+            <% end %>
             </td>
         <% end %>
     </tr>
