cleaned up subs form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
             <li><%= link_to "Dashboard", root_path %></li>
             <li><%= link_to "Edit Preferences", dashboard_new_preference_path %><li>
             <li><%= link_to "Submitted Preferences", dashboard_preferences_path %><li>
-            <li><%= link_to "View Sub Requests", dashboard_show_sub_path %><li>
-            <li><%= link_to "Request New Sub", dashboard_new_sub_path %><li> 
+            <li><%= link_to "View Sub Requests", subs_path %><li>
+            <li><%= link_to "Request New Sub", '/subs/new' %><li> 
             <li><%= link_to "Latest Week", assignments_weeks_path %></li>
             <li><%= link_to "Request Time Off", root_path %></li>
             <li><%= link_to("Employees", '/users/all') %></li>
