--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,26 +44,27 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Dashboard", root_path %></li>
-            <li><%= link_to "Edit Preferences", dashboard_new_preference_path %><li>
-            <li><%= link_to "Submitted Preferences", dashboard_preferences_path %><li>
-            <li><%= link_to "View Sub Requests", subs_path %><li>
-            <li><%= link_to "Request New Sub", '/subs/new' %><li> 
-            <li><%= link_to "Latest Week", assignments_weeks_path %></li>
-            <li><%= link_to "Request Time Off", root_path %></li>
-            <li><%= link_to("Employees", '/users/all') %></li>
-            <% if user_signed_in? and current_user.admin? %>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "New Facility", new_facilities_path %></li>
-                  <li><%= link_to "New Week", new_assignments_weeks_path %></li>
-                  <li role="separator" class="divider"></li>
-                  <li><%= link_to "Manual Assignment", new_assignments_path %></li>
-                  <li role="separator" class="divider"></li>
-                  <li><%= link_to "Settings", settings_path %></li>
-                </ul>
-              </li>
+            <% if user_signed_in? %>
+              <li><%= link_to "Dashboard", root_path %></li>
+              <li><%= link_to "Edit Preferences", dashboard_new_preference_path %><li>
+              <li><%= link_to "Submitted Preferences", dashboard_preferences_path %><li>
+              <li><%= link_to "View Sub Requests", subs_path %><li>
+              <li><%= link_to "Request New Sub", '/subs/new' %><li> 
+              <li><%= link_to "Latest Week", assignments_weeks_path %></li>
+              <li><%= link_to("Employees", '/users/all') %></li>
+              <% if current_user.admin? %>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to "New Facility", new_facilities_path %></li>
+                    <li><%= link_to "New Week", new_assignments_weeks_path %></li>
+                    <li role="separator" class="divider"></li>
+                    <li><%= link_to "Manual Assignment", new_assignments_path %></li>
+                    <li role="separator" class="divider"></li>
+                    <li><%= link_to "Settings", settings_path %></li>
+                  </ul>
+                </li>
+              <% end %>
             <% end %>
           </ul>
         </div>
