--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,10 +46,20 @@
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
               <li><%= link_to "Dashboard", root_path %></li>
-              <li><%= link_to "Edit Preferences", dashboard_new_preference_path %><li>
-              <li><%= link_to "Submitted Preferences", dashboard_preferences_path %><li>
-              <li><%= link_to "View Sub Requests", subs_path %><li>
-              <li><%= link_to "Request New Sub", '/subs/new' %><li> 
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Preferences<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Edit Preferences", dashboard_new_preference_path %><li>
+                  <li><%= link_to "Submitted Preferences", dashboard_preferences_path %><li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Switch Assignments<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Request New Sub", '/subs/new' %><li> 
+                  <li><%= link_to "View Sub Requests", subs_path %><li>
+                </ul>
+              </li>
               <li><%= link_to "Latest Week", assignments_weeks_path %></li>
               <li><%= link_to("Employees", '/users/all') %></li>
               <% if current_user.admin? %>
