--- a/app/views/subs/show.html.erb
+++ b/app/views/subs/show.html.erb
@@ -4,7 +4,10 @@
     <%= submit_tag("Select Week", class:"btn btn-default") %>
 <% end %>
 <% @subs.each do |p| %>
-  <%= p.assignment.to_s %> <%= p.comments %><br>
+  <%= form_tag("/subs/take", method: "patch") do %>
+    <b><%= p.assignment.user.name %></b> <%= p.assignment.to_s %> <%= p.comments %>
+    <%= hidden_field_tag "sub_id", p.id %>
+    <%= submit_tag "Take Shift", class:"btn btn-default" %>
+  <% end %>
+  <br>
 <% end %>
-
-
