--- a/app/assets/stylesheets/subs.scss
+++ b/app/assets/stylesheets/subs.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the subs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+th, td {
+    padding: 15px;
+    border-right: 1pt solid #eee;
+    
+}
+
+.no-right {
+    border-right: 0pt;
+}
+
+th {
+    border-bottom: 1pt solid #eee;
+}
