--- a/app/views/layouts/_weekly_calendar.html.erb
+++ b/app/views/layouts/_weekly_calendar.html.erb
@@ -1,12 +1,12 @@
-<table class="table table-bordered fixed" style="text-align:center">
-    <col width="120px" />
-    <col width="100px" />
-    <col width="100px" />
-    <col width="100px" />
-    <col width="100px" />
-    <col width="100px" />
-    <col width="100px" />
-    <col width="100px" />
+<table class="table-bordered" style="text-align:center" width="1200">
+    <col width="130" />
+    <col width="130" />
+    <col width="130" />
+    <col width="130" />
+    <col width="130" />
+    <col width="130" />
+    <col width="130" />
+    <col width="130" />
     <tr>
         <th style="text-align:center">Time</th>
         <th style="text-align:center">Sunday</th>
@@ -19,7 +19,7 @@
     </tr>
 <% for t in all_times %>
     <tr>
-        <td><%= t %></td>
+        <td height="30"><%= t %></td>
         <% for day in [:su, :m, :tu, :w, :th, :f, :sa] do %>
             <% @id = day.to_s + "_" + t %>
             <% entry = entries_hash[day][t] %>
