--- a/app/views/users/all.html.erb
+++ b/app/views/users/all.html.erb
@@ -1,8 +1,25 @@
 <h3>All Employees</h3>
 <div class="row">
-<div class="col-md-2">
-<div class="list-group">
-<% for user in @users %>
-    <%= link_to(user.name, '/users/'+user.id.to_s, { :class=>"list-group-item"}) %>
-<% end %>
-</div></div></div>
+    <div class="col-md-2">
+        <div class="list-group">
+        <% for user in @users %>
+            <%= link_to(user.name, '/users/'+user.id.to_s, {:class=>"list-group-item"}) %>
+        <% end %>
+        </div>
+    </div>
+    <% if current_user.admin? %>
+        <div class="col-md-1">
+            <%= form_tag('/users/privileges') do %>
+                <div class="list-group">
+                    <% for user in @users %>
+                        <%= check_box_tag 'tag_ids[]', user.id, false, {:class=>"list-group-item"} %>
+                    <% end %>
+                </div>
+                Confirm with admin code:
+                <%= text_field_tag 'confirm' %>
+                <%= submit_tag 'Make admin', {:class=>"btn btn-default"} %>
+            <% end %>
+        </div>
+        
+    <% end %>
+</div>
