--- a/app/views/assignments_weeks/show.html.erb
+++ b/app/views/assignments_weeks/show.html.erb
@@ -12,4 +12,8 @@
     <%= link_to(facility.name,facilities_path(facility.id, :assignments_week_id => @assignments_week.id), { :class=>"list-group-item"}) %>
 <% end %>
 </div></div></div>
+<% if @assignments_week.assignments.empty? %>
 <%= link_to('Automatically Generate Assignments', '/generate_assignments/'+@assignments_week.id.to_s, { :class=>"btn btn-primary", :role=>"button"}) %>
+<% else %>
+<%= link_to('Automatically Generate Assignments', '/generate_assignments/'+@assignments_week.id.to_s, { :class=>"btn btn-primary", :role=>"button", :data => {:confirm => 'Are you sure? There are existing assignments for this week, and regenerating will delete any existing assignments for this week'}}) %>
+<% end %>
