--- a/app/views/users/all.html.erb
+++ b/app/views/users/all.html.erb
@@ -8,16 +8,23 @@
         </div>
     </div>
     <% if current_user.admin? %>
-        <div class="col-md-1">
+        <div class="col-md-2">
             <%= form_tag('/users/privileges') do %>
                 <div class="list-group">
                     <% for user in @users %>
-                        <%= check_box_tag 'tag_ids[]', user.id, false, {:class=>"list-group-item"} %>
+                        <div class="list-group-item">
+                            <% if user.admin? %>
+                                <%= check_box_tag "tag_ids[]", user.id, false, {:disabled=>true, :id=>"tag_id_#{user.id}"} %>
+                                (is already admin)
+                            <% else %>
+                                <%= check_box_tag "tag_ids[]", user.id, false, {:class=>"list-group-item", :id=>"tag_id_#{user.id}"} %>
+                            <% end %>
+                        </div>
                     <% end %>
                 </div>
                 Confirm with admin code:
                 <%= text_field_tag 'confirm' %>
-                <%= submit_tag 'Make admin', {:class=>"btn btn-default"} %>
+                <%= submit_tag 'Make Admin', {:class=>"btn btn-default"} %>
             <% end %>
         </div>
         
