--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -3,10 +3,9 @@
 <% @settings.each_key do |key| %>
   <% @setting = Setting.find_by(var: key) || Setting.new(var: key) %>
   <%= form_for(@setting, url: settings_path(@setting.var), method: 'patch') do |f| %>
-      <%= f.label key, "Change Sign-up Code (for new users)" %><br />
-      <p><i>Change may take some time to be reflected</i></p>
-      <%= f.text_field :value, autocomplete: "off", id: "Sign up code"%><br />
-      <%= f.submit "Update" %>
+      <%= f.label key, "Change "+@setting.var %><br />
+      <%= f.text_field :value, autocomplete: "off", id: @setting.var%><br />
+      <%= f.submit "Update", class: "btn btn-default" %>
   <% end %>
 <% end %>
 
