--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,19 @@ body {
  position: relative;
  left: 15px;
 }
+
+.form-control {
+ display: inline;
+}
+
+.form-control-small {
+ width: 70px;
+}
+
+.form-control-medium {
+ width: 135px;
+}
+
+.form-control-wide {
+ width: 250px;
+}
