--- a/app/views/subs/show.html.erb
+++ b/app/views/subs/show.html.erb
@@ -1,7 +1,7 @@
 <head><%= stylesheet_link_tag 'subs'%></head>
 <h3> Current Sub Requests </h3>
 <%= form_tag(subs_path, method: "get") do %>
-    <%= select_tag :assignments_week_id, options_for_select(@weeks, @chosen_week), {class: "form-control", style: "width:210px;display:inline"} %>
+    <%= select_tag :assignments_week_id, options_for_select(@weeks, @chosen_week), {class: "form-control form-control-wide"} %>
     <%= submit_tag("Select Week", class:"btn btn-default") %>
 <% end %>
 <br>
