permissions for delete

--- a/app/views/users/preference.html.erb
+++ b/app/views/users/preference.html.erb
@@ -2,6 +2,8 @@
 <ul class="nav nav-tabs">
   <li role="presentation"><%= link_to("Assigned Schedule", "/users/"+@user.id.to_s+"/assignments") %></li>
   <li role="presentation" class="active"><%= link_to("Preference Schedule","/users/"+@user.id.to_s+"/preference") %></li>
-  <li role="presentation"><%= link_to("Delete Assignments","/users/"+@user.id.to_s+"/delete_assignments") %></li>
+  <% if current_user.admin? %>
+    <li role="presentation"><%= link_to("Delete Assignments","/users/"+@user.id.to_s+"/delete_assignments") %></li>
+  <% end %>
 </ul>
 <%= render partial: "layouts/weekly_calendar", locals: { all_times: Preference.all_times, entries_hash: @preference_hash} %>
