--- a/app/views/users/assignments.html.erb
+++ b/app/views/users/assignments.html.erb
@@ -2,7 +2,9 @@
 <ul class="nav nav-tabs">
   <li role="presentation" class="active"><%= link_to("Assigned Schedule", "/users/"+@user.id.to_s+"/assignments") %></li>
   <li role="presentation"><%= link_to("Preference Schedule","/users/"+@user.id.to_s+"/preference") %></li>
-  <li role="presentation"><%= link_to("Delete Assignments","/users/"+@user.id.to_s+"/delete_assignments") %></li>
+  <% if current_user.admin? %>
+    <li role="presentation"><%= link_to("Delete Assignments","/users/"+@user.id.to_s+"/delete_assignments") %></li>
+  <% end %>
 </ul>
 <div>
 <%= form_tag("/users/"+@user.id.to_s+"/assignments", method: "get") do %>
