--- a/app/views/users/delete.html.erb
+++ b/app/views/users/delete.html.erb
@@ -2,16 +2,18 @@
 <ul class="nav nav-tabs">
   <li role="presentation"><%= link_to("Assigned Schedule", "/users/"+@user.id.to_s+"/assignments") %></li>
   <li role="presentation"><%= link_to("Preference Schedule","/users/"+@user.id.to_s+"/preference") %></li>
-  <li role="presentation" class="active"><%= link_to("Delete Assignments","/users/"+@user.id.to_s+"/delete_assignments") %></li>
+  <% if current_user.admin? %>
+    <li role="presentation" class="active"><%= link_to("Delete Assignments","/users/"+@user.id.to_s+"/delete_assignments") %></li>
+  <% end %>
 </ul>
 <div class="row"><div class="col-md-5">
 <div class="panel panel-default"><div class="panel-body">
   <%= form_tag("/users/"+@user.id.to_s+"/delete_assignments", method: "get") do %>
-    <%= select_tag :assignments_week_id, options_for_select(@weeks, @chosen_week), {class: "form-control", style: "width:210px;display:inline"} %>
+    <%= select_tag :assignments_week_id, options_for_select(@weeks, @chosen_week), {class: "form-control form-control-wide"} %>
     <%= submit_tag("Select Week", class:"btn btn-default") %>
   <% end %>
   <%= form_tag("/users/"+@user.id.to_s+"/delete_assignments", method: "delete") do %>
-    <%= select_tag :assignment_id, options_for_select(@assignments), {class: "form-control", style: "width:210px;display:inline"} %>
+    <%= select_tag :assignment_id, options_for_select(@assignments), {class: "form-control form-control-wide"} %>
     <%= submit_tag("Delete", class:"btn btn-default") %>
   <% end %>
 </div></div></div></div>
