--- a/app/views/users/assignments.html.erb
+++ b/app/views/users/assignments.html.erb
@@ -1,13 +1,13 @@
-<h3><%= @user.name %>'s Assigned Schedule</h3>
+<h3><%= @username %>'s Assigned Schedule</h3>
 <ul class="nav nav-tabs">
-  <li role="presentation" class="active"><%= link_to("Assigned Schedule", sanitize("/users/"+@user.id.to_s+"/assignments")) %></li>
-  <li role="presentation"><%= link_to("Preference Schedule", sanitize("/users/"+@user.id.to_s+"/preference")) %></li>
+  <li role="presentation" class="active"><%= link_to("Assigned Schedule", "/users/"+sanitize(@userid.to_s)+"/assignments") %></li>
+  <li role="presentation"><%= link_to("Preference Schedule", "/users/"+sanitize(@userid.to_s)+"/preference") %></li>
   <% if current_user.admin? %>
-    <li role="presentation"><%= link_to("Delete Assignments", sanitize("/users/"+@user.id.to_s+"/delete_assignments")) %></li>
+    <li role="presentation"><%= link_to("Delete Assignments", "/users/"+sanitize(@userid.to_s)+"/delete_assignments") %></li>
   <% end %>
 </ul>
 <div>
-<%= form_tag("/users/"+@user.id.to_s+"/assignments", method: "get") do %>
+<%= form_tag("/users/"+@userid.to_s+"/assignments", method: "get") do %>
   <%= select_tag :assignments_week_id, options_for_select(@weeks, @chosen_week), {class: "form-control", style: "width:210px;display:inline"} %>
   <%= submit_tag("Select Week", class:"btn btn-default") %>
 <% end %>
