--- a/app/views/users/delete.html.erb
+++ b/app/views/users/delete.html.erb
@@ -1,9 +1,9 @@
 <h3>Delete <%= @username %>'s Assignments</h3>
 <ul class="nav nav-tabs">
-  <li role="presentation"><%= link_to("Assigned Schedule", "/users/"+sanitize(@userid.to_s)+"/assignments") %></li>
-  <li role="presentation"><%= link_to("Preference Schedule", "/users/"+sanitize(@userid.to_s)+"/preference") %></li>
+  <li role="presentation"><%= link_to("Assigned Schedule", user_assignments_path(@userid)) %></li>
+  <li role="presentation"><%= link_to("Preference Schedule", user_preference_path(@userid)) %></li>
   <% if current_user.admin? %>
-    <li role="presentation" class="active"><%= link_to("Delete Assignments", "/users/"+sanitize(@userid.to_s)+"/delete_assignments") %></li>
+    <li role="presentation" class="active"><%= link_to("Delete Assignments", user_delete_assignments_path(@userid)) %></li>
   <% end %>
 </ul>
 <div class="row"><div class="col-md-5">
